<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="pref_name_serverurl">Server URL</string>
    <string name="pref_desc_serverurl">URL for storage server.</string>
	<string name="pref_name_account">Google account</string>
    <string name="pref_desc_account">Account to use for server access.</string>
    <string name="pref_name_https">Secure connections</string>
    <string name="pref_desc_https_on">Using a secure connection protects your data from snooping. It might take a little longer, though</string>
    <string name="pref_desc_https_off">Using a insecure connection is slightly faster and transfers less data.</string>
    
    <string name="app_name">What I Read</string>
    <string name="action_settings">Settings</string>
    <string name="action_scan">Scan</string>
    <string name="action_delete">Delete</string>
    <string name="action_search">Search</string>
    <string name="action_add">Add</string>
    <string name="action_save">Save</string>
    <string name="action_ok">OK</string>
    <string name="action_edit">Edit</string>
    <string name="action_cancel">Cancel</string>
    <string name="action_about">About</string>
    <string name="action_sort">Sort</string>
    
    <string name="sepOr">--- or ---</string>
    
    <string name="invalid_isbn">Invalid ISBN</string>
    
    <string name="fragment_title_register">Register</string>
    <string name="fragment_title_browse">Browse Books</string>
    
    <string name="input_title">Search</string>
    
    <string name="alpha">Welcome to the alpha-version of "what i read". Please note that this is a project still under active development. Bugs are not only possible, they are expected. Nevertheless, hopefully you will enjoy this application.\n\nThis application is free software. You can retrieve the source code and licence at https://github.com/Norwae/what-i-read.\n\nThe ISBN metadata lookup is powered by Google Books.</string>

    
    <string name="title">Title</string>
    <string name="subtitle">Subtitle</string>
    <string name="series">Series</string>
    <string name="publisher">Publisher</string>
    <string name="description">Description</string>
    <string name="pageCount"># Pages</string>
    <string name="author">Author</string>
    <string name="isbn">ISBN-13</string>
    <string name="comment">Comment</string>
   
    <string name="coverImage">Cover</string>
    
    <string name="alert.alreadyKnown">You\'ve already read this book</string>
    
    <string name="query.wirServer">Waiting for server</string>
    
    <string name="progress.pleaseWait">Please wait</string>
    <string name="progress.initial">Performing background work</string>
    <string name="progress.openDB">Connecting to book database</string>
	<string name="progress.saveBook">Saving book information</string>
	<string name="progress.deleteBook">Deleting book information</string>
	
	<string name="barcode_scanner.download.title">Install Barcode Scanner?</string>
	<string name="barcode_scanner.download.message">This application requires Barcode Scanner. Would you like to install it?</string>
</resources>
