<menu xmlns:android="http://schemas.android.com/apk/res/android" >

    <item
        android:id="@+id/save"
        android:icon="@android:drawable/ic_menu_save"
        android:orderInCategory="0"
        android:showAsAction="always"
        android:title="@string/action_save"/>
    
    <item
        android:id="@+id/delete"
        android:icon="@android:drawable/ic_menu_delete"
        android:orderInCategory="10"
        android:showAsAction="always"
        android:title="@string/action_delete"/>
    <item
        android:id="@+id/action_settings"
        android:orderInCategory="100"
        android:showAsAction="never"
        android:title="@string/action_settings"/>
    <item
        android:id="@+id/action_about"
        android:orderInCategory="200"
        android:showAsAction="never"
        android:title="@string/action_about"/>

</menu>