<menu xmlns:android="http://schemas.android.com/apk/res/android" >

    <item
        android:id="@+id/action_scan"
        android:icon="@android:drawable/ic_menu_camera"
        android:orderInCategory="0"
        android:showAsAction="always"
        android:title="@string/action_scan"/>
    
    <item
        android:id="@+id/action_input_isbn"
        android:icon="@android:drawable/ic_menu_edit"
        android:orderInCategory="10"
        android:showAsAction="always"
        android:title="@string/action_add"/>
    <item
        android:id="@+id/action_settings"
        android:orderInCategory="100"
        android:showAsAction="never"
        android:title="@string/action_settings"/>
    <item
        android:id="@+id/action_about"
        android:orderInCategory="200"
        android:showAsAction="never"
        android:title="@string/action_about"/>

</menu>